--- a/ConsoleGameEngine/ConsoleGameEngine.csproj
+++ b/ConsoleGameEngine/ConsoleGameEngine.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SimplexNoise" Version="2.0.0" />
+  </ItemGroup>
 
 </Project>
