--- a/Vs22_ConsoleApp1/Vs22_ConsoleApp1.csproj
+++ b/Vs22_ConsoleApp1/Vs22_ConsoleApp1.csproj
@@ -9,6 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\TestSprite.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\TestSprite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ConsoleGameEngine\ConsoleGameEngine.csproj" />
   </ItemGroup>
 
